[gd_scene load_steps=6 format=1]

[ext_resource path="res://addons/net.kivano.fsm/content/FSMGraph/Arrow/CloseIcon/CloseIcon.gd" type="Script" id=1]
[ext_resource path="res://addons/net.kivano.fsm/assets/delete.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource/name = "appear"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( -2, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=2]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=3]

resource/name = "dissapear"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( -2, 0.25 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 1.05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( -2, -2 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="CloseIcon" type="Node2D"]

transform/pos = Vector2( -0.475647, 0.951309 )
script/script = ExtResource( 1 )

[node name="Button" type="TextureButton" parent="."]

visibility/self_opacity = 0.8
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -17.0
margin/top = -19.0
margin/right = 19.0
margin/bottom = 17.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Animator" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/appear = SubResource( 1 )
anims/default = SubResource( 2 )
anims/dissapear = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="mouse_enter" from="Button" to="." method="_on_Button_mouse_enter"]

[connection signal="mouse_exit" from="Button" to="." method="_on_Button_mouse_exit"]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]


